<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/watch_later_menu"
        android:icon="@drawable/ic_watch_later"
        android:title="@string/watch_later_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/selections"
        android:icon="@drawable/ic_baseline_video_library_24"
        android:title="@string/selections"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/set"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom"/>

</menu>