<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/selections_fragment_root"
        android:visibility="invisible"
        tools:visibility="visible"
        android:background="@drawable/selections_background"
        tools:context=".view.fragments.SelectionsFragment">

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>